--- a/index.html
+++ b/index.html
@@ -1,14 +1,45 @@
-<!doctype html> 
+<!doctype html>
 <html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US"> 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<link rel="stylesheet" type="text/css" href="css/master.css" media="all"/>
-	<title>Type/Code</title>
+	<title></title>
+	
+	
+	
 </head>
-<body>
-	<div class="splash">
-		<p>Type/Code is an interaction design studio in NYC. We love to envision creative solutions, and bring ideas to life. We just opened our doors, so a full website is still in the oven.</p>
+<body id='app'>
+	
+	<h1 id='tag'>Type/Code</h1>
+	
+	<div id="splash" class="splash">
+		<p>Type/Code is an interaction design studio in NYC. We love to envision creative solutions, and
+			 bring ideas to life. We just opened our doors, so a full website is still in the oven.
+			 Type/Code is an interaction design studio in NYC. We love to envision creative solutions, and
+			 bring ideas to life. We just opened our doors, so a full website is still in the oven.
+			 Type/Code is an interaction design studio in NYC. We love to envision creative solutions, and
+			 bring ideas to life. We just opened our doors, so a full website is still in the oven.
+			 Type/Code is an interaction design studio in NYC. We love to envision creative solutions, and
+			 bring ideas to life. We just opened our doors, so a full website is still in the oven.</p>
 		<p>Drop us a line: <a href="">hello@typeslashcode.com</a></p>
 	</div>
+	
+	<div id="splash-mini" class="splash">
+		<p><span style='font-weight:bold'>Type/Code</span> is an interaction design studio in NYC. We love to envision creative solutions, and
+			 bring ideas to life. We just opened our doors, so a full website is still in the oven.</p>
+		<p class='email'><span>Drop us a line:</span> <a href="">hello@typeslashcode.com</a></p>
+		<p class='email'>We also have a <span><a href='http://blog.typeslasgcode.com'>blog</a></span>.</p>
+	</div>
+	
+	<script type="text/javascript" src="http://yui.yahooapis.com/combo?3.2.0/build/yui/yui-min.js&3.2.0/build/json/json-min.js&3.2.0/build/oop/oop-min.js&3.2.0/build/event-custom/event-custom-min.js&3.2.0/build/event/event-base-min.js&3.2.0/build/dom/dom-min.js&3.2.0/build/dom/dom-style-ie-min.js&3.2.0/build/pluginhost/pluginhost-min.js&3.2.0/build/node/node-min.js&3.2.0/build/event/event-delegate-min.js&3.2.0/build/querystring/querystring-stringify-simple-min.js&3.2.0/build/queue-promote/queue-promote-min.js&3.2.0/build/datatype/datatype-xml-min.js&3.2.0/build/io/io-min.js&3.2.0/build/event-simulate/event-simulate-min.js&3.2.0/build/node/node-event-simulate-min.js"></script>
+	<script type="text/javascript" src="scripts/tc.app.js"></script>
+	<script type="text/javascript" charset="utf-8">
+			
+			YUI().use('io','json','node','event-custom','node-event-simulate','overlay','widget-stdmod',
+			'gallery-form',function(Y){
+				app.initialize(Y);
+			});
+			
+		</script>
 </body>
 </html>
