--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US"> 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<link rel="stylesheet" type="text/css" href="css/master.css" media="all"/>
-	<title></title>
+	<link rel="stylesheet" type="text/css" href="css/tc.reset.css" media="all"/>
+	<link rel="stylesheet" type="text/css" href="css/tc.app.css" media="all"/>
 	
-	
+	<title>Type/Code</title>
 	
 </head>
 <body id='app'>
