--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body id='app'>
 	
-	<h1 id='tag'>Type/Code</h1>
+	<h1 class='tag'>Type/Code</h1>
 	
-	<div id="splash" class="splash">
+	<div class="splash big">
 		<p>Type/Code is an interaction design studio in NYC. We love to envision creative solutions, and
 			 bring ideas to life. We just opened our doors, so a full website is still in the oven.
 			 Type/Code is an interaction design studio in NYC. We love to envision creative solutions, and
@@ -24,11 +24,11 @@
 		<p>Drop us a line: <a href="">hello@typeslashcode.com</a></p>
 	</div>
 	
-	<div id="splash-mini" class="splash">
+	<div class="splash mini">
 		<p><span style='font-weight:bold'>Type/Code</span> is an interaction design studio in NYC. We love to envision creative solutions, and
 			 bring ideas to life. We just opened our doors, so a full website is still in the oven.</p>
 		<p class='email'><span>Drop us a line:</span> <a href="">hello@typeslashcode.com</a></p>
-		<p class='email'>We also have a <span><a href='http://blog.typeslasgcode.com'>blog</a></span>.</p>
+		<p class='email'>We also have a <span><a href='http://blog.typeslashcode.com'>blog</a></span>.</p>
 	</div>
 	
 	<script type="text/javascript" src="http://yui.yahooapis.com/combo?3.2.0/build/yui/yui-min.js&3.2.0/build/json/json-min.js&3.2.0/build/oop/oop-min.js&3.2.0/build/event-custom/event-custom-min.js&3.2.0/build/event/event-base-min.js&3.2.0/build/dom/dom-min.js&3.2.0/build/dom/dom-style-ie-min.js&3.2.0/build/pluginhost/pluginhost-min.js&3.2.0/build/node/node-min.js&3.2.0/build/event/event-delegate-min.js&3.2.0/build/querystring/querystring-stringify-simple-min.js&3.2.0/build/queue-promote/queue-promote-min.js&3.2.0/build/datatype/datatype-xml-min.js&3.2.0/build/io/io-min.js&3.2.0/build/event-simulate/event-simulate-min.js&3.2.0/build/node/node-event-simulate-min.js"></script>
