some more tweaks: added div to block interaction with bg text

--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
 	
 	<h1 class='tag'>Type/Code</h1>
 	
+	<div class='blocker'></div>
+	
 	<div class="splash big">
 		<p>Type/Code is an interaction design studio in NYC. We love to envision creative solutions, and
+			 bring ideas to life. We just opened our doors, so a full website is still in the oven.
+			 Type/Code is an interaction design studio in NYC. We love to envision creative solutions, and
+			 bring ideas to life. We just opened our doors, so a full website is still in the oven.
+			 Type/Code is an interaction design studio in NYC. We love to envision creative solutions, and
 			 bring ideas to life. We just opened our doors, so a full website is still in the oven.
 			 Type/Code is an interaction design studio in NYC. We love to envision creative solutions, and
 			 bring ideas to life. We just opened our doors, so a full website is still in the oven.
