it is still is working state before transition to webworkers... -- gonna make some crazy changes now!!!

--- a/index.html
+++ b/index.html
@@ -12,37 +12,22 @@
 	
 	<h1 class='tag'>Type/Code</h1>
 	
-	<div class='blocker'></div>
-	
-	<div class="splash big">
-		<p>Type/Code is an interaction design studio in NYC. We love to envision creative solutions, and
-			 bring ideas to life. We just opened our doors, so a full website is still in the oven.
-			 Type/Code is an interaction design studio in NYC. We love to envision creative solutions, and
-			 bring ideas to life. We just opened our doors, so a full website is still in the oven.
-			 Type/Code is an interaction design studio in NYC. We love to envision creative solutions, and
-			 bring ideas to life. We just opened our doors, so a full website is still in the oven.
-			 Type/Code is an interaction design studio in NYC. We love to envision creative solutions, and
-			 bring ideas to life. We just opened our doors, so a full website is still in the oven.
-			 Type/Code is an interaction design studio in NYC. We love to envision creative solutions, and
-			 bring ideas to life. We just opened our doors, so a full website is still in the oven.
-			 Type/Code is an interaction design studio in NYC. We love to envision creative solutions, and
-			 bring ideas to life. We just opened our doors, so a full website is still in the oven.</p>
-		<p>Drop us a line: <a href="">hello@typeslashcode.com</a></p>
-	</div>
-	
-	<div class="splash mini">
-		<p><span style='font-weight:bold'>Type/Code</span> is an interaction design studio in NYC. We love to envision creative solutions, and
-			 bring ideas to life. We just opened our doors, so a full website is still in the oven.</p>
-		<p class='email'><span>Drop us a line:</span> <a href="">hello@typeslashcode.com</a></p>
-		<p class='email'>We also have a <span><a href='http://blog.typeslashcode.com'>blog</a></span>.</p>
-	</div>
 	
 	<script type="text/javascript" src="http://yui.yahooapis.com/combo?3.2.0/build/yui/yui-min.js&3.2.0/build/json/json-min.js&3.2.0/build/oop/oop-min.js&3.2.0/build/event-custom/event-custom-min.js&3.2.0/build/event/event-base-min.js&3.2.0/build/dom/dom-min.js&3.2.0/build/dom/dom-style-ie-min.js&3.2.0/build/pluginhost/pluginhost-min.js&3.2.0/build/node/node-min.js&3.2.0/build/event/event-delegate-min.js&3.2.0/build/querystring/querystring-stringify-simple-min.js&3.2.0/build/queue-promote/queue-promote-min.js&3.2.0/build/datatype/datatype-xml-min.js&3.2.0/build/io/io-min.js&3.2.0/build/event-simulate/event-simulate-min.js&3.2.0/build/node/node-event-simulate-min.js"></script>
+	<script type="text/javascript" src="scripts/lib/excanvas.compiled.js"></script>
+	<script type="text/javascript" src="scripts/lib/includes.sylvester.src.js"></script>
+	
+	<script type="text/javascript" src="scripts/tc.util.js"></script>
+	<script type="text/javascript" src="scripts/tc.app.particle.panel.js"></script>
+	<script type="text/javascript" src="scripts/tc.app.particle.context.js"></script>
+	<script type="text/javascript" src="scripts/tc.app.particle.context.worker.js"></script>
+	<script type="text/javascript" src="scripts/tc.app.particle.context.canvas.js"></script>
+	<script type="text/javascript" src="scripts/tc.app.particle.particle.js"></script>
+	<script type="text/javascript" src="scripts/tc.app.squares.js"></script>
 	<script type="text/javascript" src="scripts/tc.app.js"></script>
 	<script type="text/javascript" charset="utf-8">
 			
-			YUI().use('io','json','node','event-custom','node-event-simulate','overlay','widget-stdmod',
-			'gallery-form',function(Y){
+			YUI().use('io','json','node','event-custom','node-event-simulate','util',function(Y){
 				app.initialize(Y);
 			});
 			
