--- a/index.html
+++ b/index.html
@@ -1,36 +1,25 @@
-<!doctype html>
-<html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US"> 
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<link rel="stylesheet" type="text/css" href="css/tc.reset.css" media="all"/>
-	<link rel="stylesheet" type="text/css" href="css/tc.app.css" media="all"/>
-	
-	<title>Type/Code</title>
-	
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Type/Code</title>
+<link href="tc.reset.css" rel="stylesheet" type="text/css" />
+<link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
-<body id='app'>
-	
-	<h1 class='tag'>Type/Code</h1>
-	
-	
-	<script type="text/javascript" src="http://yui.yahooapis.com/combo?3.2.0/build/yui/yui-min.js&3.2.0/build/json/json-min.js&3.2.0/build/oop/oop-min.js&3.2.0/build/event-custom/event-custom-min.js&3.2.0/build/event/event-base-min.js&3.2.0/build/dom/dom-min.js&3.2.0/build/dom/dom-style-ie-min.js&3.2.0/build/pluginhost/pluginhost-min.js&3.2.0/build/node/node-min.js&3.2.0/build/event/event-delegate-min.js&3.2.0/build/querystring/querystring-stringify-simple-min.js&3.2.0/build/queue-promote/queue-promote-min.js&3.2.0/build/datatype/datatype-xml-min.js&3.2.0/build/io/io-min.js&3.2.0/build/event-simulate/event-simulate-min.js&3.2.0/build/node/node-event-simulate-min.js"></script>
-	<script type="text/javascript" src="scripts/lib/excanvas.compiled.js"></script>
-	<script type="text/javascript" src="scripts/lib/includes.sylvester.src.js"></script>
-	
-	<script type="text/javascript" src="scripts/tc.util.js"></script>
-	<script type="text/javascript" src="scripts/tc.app.particle.panel.js"></script>
-	<script type="text/javascript" src="scripts/tc.app.particle.context.js"></script>
-	<script type="text/javascript" src="scripts/tc.app.particle.context.worker.js"></script>
-	<script type="text/javascript" src="scripts/tc.app.particle.context.canvas.js"></script>
-	<script type="text/javascript" src="scripts/tc.app.particle.particle.js"></script>
-	<script type="text/javascript" src="scripts/tc.app.squares.js"></script>
-	<script type="text/javascript" src="scripts/tc.app.js"></script>
-	<script type="text/javascript" charset="utf-8">
-			
-			YUI().use('io','json','node','event-custom','node-event-simulate','util',function(Y){
-				app.initialize(Y);
-			});
-			
-		</script>
+
+<body>
+
+<div class="vignette">
+	<div class="top"></div>
+	<div class="bottom"></div>
+	<div class="left"></div>
+	<div class="right"></div>
+</div>
+
+<div class="content">
+	<h2>We are Type/Code. We design things, and make them come to life. We just opened our doors, so a full website is still in the oven.</h2>
+	<h2>Drop us a line: <a href="mailto:hello@typeslashcode.com">hello@typeslashcode.com</a></h2>
+	<h2>See what we’re up to on <a href="blog.typelashcode.com">our blog</a></h2>
+</div>
 </body>
 </html>
