--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 		<script type="text/javascript" src="scripts/tc.app.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			
-			YUI().use('io','json','node','event-custom','node-event-simulate','util',function(Y){
+			YUI().use('io','json','node','event-custom','node-event-simulate','util',
+			'event-resize',function(Y){
 				app.initialize(Y);
 			});
 			
