working on browser detection

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!doctype html>
+<html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<title>Type/Code</title>
@@ -21,7 +21,7 @@
 		</div>
 		
 		<div class="content">
-			<h2>We are Type/Code. We design things, and make them come to life. We just opened our doors, so a full website is still in the oven.</h2>
+			<h2>We are <em>Type/Code</em>. We design things, and make them come to life. We just opened our doors, so a full website is still in the oven.</h2>
 			<h2>Drop us a line: <a href="mailto:hello@typeslashcode.com">hello@typeslashcode.com</a></h2>
 			<h2>See what we’re up to on <a href="blog.typelashcode.com">our blog</a></h2>
 		</div>
