--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
 		<link href="css/tc.reset.css" rel="stylesheet" type="text/css" />
 		<link href="css/tc.splash.css" rel="stylesheet" type="text/css" />
 	</head>
-	
 	<body>
-		
-		<div class='particles_wrapper'>
+		<div class='masthead'>
+			<h1><span>Type/Code</span></h1>
 			<div class='particles' id='app'></div>
 		</div>
-		
+			
 		<div class="vignette">
 			<div class="top"></div>
 			<div class="bottom"></div>
@@ -21,17 +20,17 @@
 		</div>
 		
 		<div class="content">
-			<h2>We are <em>Type/Code</em>. We design things, and make them come to life. We just opened our doors, so a full website is still in the oven.</h2>
-			<h2>Drop us a line: <a href="mailto:hello@typeslashcode.com">hello@typeslashcode.com</a></h2>
-			<h2>See what we’re up to on <a href="blog.typelashcode.com">our blog</a></h2>
+			<p>We are <em>Type/Code</em>. We design things, and make them come to life. We just opened our doors, so a full website is still in the oven.</p>
+			<p>Drop us a line: <a href="mailto:hello@typeslashcode.com">hello@typeslashcode.com</a></p>
+			<p>See what we’re up to on <a href="http://blog.typelashcode.com">our blog</a></p>
 		</div>
 		
 		<script type="text/javascript" src="http://yui.yahooapis.com/combo?3.2.0/build/yui/yui-min.js&3.2.0/build/json/json-min.js&3.2.0/build/oop/oop-min.js&3.2.0/build/event-custom/event-custom-min.js&3.2.0/build/event/event-base-min.js&3.2.0/build/dom/dom-min.js&3.2.0/build/dom/dom-style-ie-min.js&3.2.0/build/pluginhost/pluginhost-min.js&3.2.0/build/node/node-min.js&3.2.0/build/event/event-delegate-min.js&3.2.0/build/querystring/querystring-stringify-simple-min.js&3.2.0/build/queue-promote/queue-promote-min.js&3.2.0/build/datatype/datatype-xml-min.js&3.2.0/build/io/io-min.js&3.2.0/build/event-simulate/event-simulate-min.js&3.2.0/build/node/node-event-simulate-min.js"></script>
 		<script type="text/javascript" src="scripts/lib/excanvas.compiled.js"></script>
 		<script type="text/javascript" src="scripts/lib/includes.sylvester.src.js"></script>
     
-    <script type="text/javascript" src="http://use.typekit.com/kmb8qqs.js"></script>
-    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+    	<script type="text/javascript" src="http://use.typekit.com/kmb8qqs.js"></script>
+    	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     
 		<script type="text/javascript" src="scripts/tc.util.js"></script>
 		<script type="text/javascript" src="scripts/tc.app.particle.panel.js"></script>
