working on new graphics effects

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<div class='masthead'>
 			<h1><span>Type/Code</span></h1>
-			<div class='particles' id='app'></div>
+			<div class='particles' id='app'><p id='netenergy'></p></div>
 		</div>
 			
 		<div class="vignette">
@@ -29,8 +29,8 @@
 		<script type="text/javascript" src="scripts/lib/excanvas.compiled.js"></script>
 		<script type="text/javascript" src="scripts/lib/includes.sylvester.src.js"></script>
     
-    	<script type="text/javascript" src="http://use.typekit.com/kmb8qqs.js"></script>
-    	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+		<script type="text/javascript" src="http://use.typekit.com/kmb8qqs.js"></script>
+		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     
 		<script type="text/javascript" src="scripts/tc.util.js"></script>
 		<script type="text/javascript" src="scripts/tc.app.particle.panel.js"></script>
