--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</div>
 		
 		<div class="content">
-			<p>We are <em>Type/Code</em>. We design things, and make them come to life. We just opened our doors, so a full website is still in the oven.</p>
+			<p>We are <em>Type/Code</em>. We design things and make them come to life. We just opened our doors, so a full website is still in the oven.</p>
 			<p>Drop us a line: <a href="mailto:hello@typeslashcode.com">hello@typeslashcode.com</a></p>
 			<p>See what we’re up to on <a href="http://blog.typeslashcode.com">our blog</a></p>
 		</div>
