removing some unecessary markup

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<div class='masthead'>
 			<h1><span>Type/Code</span></h1>
-			<div class='particles' id='app'><p id='netenergy'></p></div>
+			<div class='particles' id='app'></div>
 		</div>
 			
 		<div class="vignette">
