changed some markup,css, and analytics

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</div>
 		
 		<div class="content">
-			<p>We are <em>Type/Code</em>. We design things and make them come to life. We just opened our doors, so a full website is still in the oven.</p>
+			<p>We are <em>Type/Code</em>. We design things and make them come to life.<br/> We just opened our doors, so a full website is still in the oven.</p>
 			<p>Drop us a line: <a href="mailto:hello@typeslashcode.com">hello@typeslashcode.com</a></p>
 			<p>See what we’re up to on <a href="http://blog.typeslashcode.com">our blog</a></p>
 		</div>
@@ -28,10 +28,10 @@
 		<script type="text/javascript" src="http://yui.yahooapis.com/combo?3.2.0/build/yui/yui-min.js&3.2.0/build/json/json-min.js&3.2.0/build/oop/oop-min.js&3.2.0/build/event-custom/event-custom-min.js&3.2.0/build/event/event-base-min.js&3.2.0/build/dom/dom-min.js&3.2.0/build/dom/dom-style-ie-min.js&3.2.0/build/pluginhost/pluginhost-min.js&3.2.0/build/node/node-min.js&3.2.0/build/event/event-delegate-min.js&3.2.0/build/querystring/querystring-stringify-simple-min.js&3.2.0/build/queue-promote/queue-promote-min.js&3.2.0/build/datatype/datatype-xml-min.js&3.2.0/build/io/io-min.js&3.2.0/build/event-simulate/event-simulate-min.js&3.2.0/build/node/node-event-simulate-min.js"></script>
 		<script type="text/javascript" src="scripts/lib/excanvas.compiled.js"></script>
 		<script type="text/javascript" src="scripts/lib/includes.sylvester.src.js"></script>
-    
+		
 		<script type="text/javascript" src="http://use.typekit.com/kmb8qqs.js"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-    
+		
 		<script type="text/javascript" src="scripts/tc.util.js"></script>
 		<script type="text/javascript" src="scripts/tc.app.particle.panel.js"></script>
 		<script type="text/javascript" src="scripts/tc.app.particle.context.js"></script>
@@ -46,14 +46,15 @@
 			});
 			
 			var _gaq = _gaq || [];
-			_gaq.push(['_setAccount', 'UA-20012698-1']);
+			_gaq.push(['_setAccount', 'UA-13114017-1']);
 			_gaq.push(['_trackPageview']);
-		
+			
 			(function() {
 				var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
 				ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
 				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 			})();
+			
 		</script>
 	</body>
 </html>
