started fadeInContent function

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<script type="text/javascript" charset="utf-8">
 			
 			YUI().use('io','json','node','event-custom','node-event-simulate','util',
-			'event-resize',function(Y){
+			'event-resize', 'anim', function(Y){
 				app.initialize(Y);
 			});
 			
