--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 			<p>See what we’re up to on <a href="http://blog.typeslashcode.com">our blog</a></p>
 		</div>
 		
+		<p class='browser-hint'>This works best on Google <a href='http://www.google.com/chrome/'>Chrome</a>.</p>
+		
 		<script type="text/javascript" src="http://yui.yahooapis.com/combo?3.2.0/build/yui/yui-min.js&3.2.0/build/json/json-min.js&3.2.0/build/oop/oop-min.js&3.2.0/build/event-custom/event-custom-min.js&3.2.0/build/event/event-base-min.js&3.2.0/build/dom/dom-min.js&3.2.0/build/dom/dom-style-ie-min.js&3.2.0/build/pluginhost/pluginhost-min.js&3.2.0/build/node/node-min.js&3.2.0/build/event/event-delegate-min.js&3.2.0/build/querystring/querystring-stringify-simple-min.js&3.2.0/build/queue-promote/queue-promote-min.js&3.2.0/build/datatype/datatype-xml-min.js&3.2.0/build/io/io-min.js&3.2.0/build/event-simulate/event-simulate-min.js&3.2.0/build/node/node-event-simulate-min.js"></script>
 		<script type="text/javascript" src="scripts/lib/excanvas.compiled.js"></script>
 		<script type="text/javascript" src="scripts/lib/includes.sylvester.src.js"></script>
