--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 		<title>Type/Code</title>
 		<link href="css/tc.reset.css" rel="stylesheet" type="text/css" />
 		<link href="css/tc.splash.css" rel="stylesheet" type="text/css" />
+		
+		<meta name="description" content="Type/Code is a collective of similar-minded emerging designers, developers, and artists bridging the gap between Technology and Design." /> 
+		<meta name="keywords" content="type, code, typecode, design, technology, parsons, web, interactive, media, typography, typeface, UX, UI, code, CSS, motion, graphics, art, artist, developer, development, critique, aesthetics, new, york, NYC, erik, carter, zeke, shore, andrew, mahon, lucas, sharp, lev, kanter, axel, esquite, ryan, riegner, visualization, information, communication, freelance, studio" /> 
 	</head>
 	<body>
 		<div class='masthead'>
