--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 		
 		<div class="content">
 			<p>We are <em>Type/Code</em>. We design things and make them come to life.<br/> We just opened our doors, so a full website is still in the oven.</p>
+			
+			<p>Check out <a href="http://blog.typeslashcode.com">our blog</a> and follow us <a href="http://twitter.com/typecode">@typecode</a></p>
+			
 			<p>Drop us a line: <a href="mailto:hello@typeslashcode.com">hello@typeslashcode.com</a></p>
-			<p>See what we’re up to on <a href="http://blog.typeslashcode.com">our blog</a></p>
 		</div>
 		
 		<p class='browser-hint'>This works best on Google <a href='http://www.google.com/chrome/'>Chrome</a>.</p>
