removed blog link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			
 			<p>In the meantime, take a gander at a pdf of <a href="http://files.typeslashcode.com/tc.generalportfolio.pdf">some of our work.</a></p>
 			
-			<p>Check out <a href="http://blog.typeslashcode.com">our blog</a> and follow us <a href="http://twitter.com/typecode">@typecode</a></p>
+			<p>Follow us <a href="http://twitter.com/typecode">@typecode</a></p>
 			
 			<p>Drop us a line: <a href="mailto:hello@typeslashcode.com">hello@typeslashcode.com</a></p>
 		</div>
